--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>yonce</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+<title>The Bey Hive</title>
 </head>
 
 <body>
-	<h1>Hello World</h1>
+	<h1>The Bey Hive</h1>
+	
+	<img src="homepage.png">
+	<p>Log In</p>
 </body>
 </html>
