--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 <body>
 	<h1>The Bey Hive</h1>
 	
-	<img src="homepage.png">
+	<img src="Images/homepage.png">
 	<p>Log In</p>
+	<img src="Images/login.png">
+	<p>Create Account</p>
+	<img src="Images/createaccount.png">
+	<p>Dashboard</p>
+	<img src="Images/dashboard.png">
+	<p>Vision Board</p>
+	<img src="Images/visionboard.png">
+	<p>Playlists</p>
+	<img src="Images/playlists.png">
 </body>
 </html>
