added security log in
password secured log in

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
 	<img src="Images/visionboard.png">
 	<p>Playlists</p>
 	<img src="Images/playlists.png">
+	
+	<form action="login.html" method="post">
+	<input type="text" name="username">
+	<input type="password" name="password">
+	<input type="submit" value="Enter">
+	</form>
 </body>
 </html>
